{
    "name": "InputActions",
    "maps": [
        {
            "name": "Touch",
            "id": "411ee7bc-fc3b-40cd-9bb8-dc8908a67f8d",
            "actions": [
                {
                    "name": "FirstContact",
                    "type": "PassThrough",
                    "id": "3673b8b5-1c46-440b-b754-c3ec7b6310ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "FirstPosition",
                    "type": "PassThrough",
                    "id": "544fc5ff-6928-45dc-b150-dac2dfca84d8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tap",
                    "type": "PassThrough",
                    "id": "7e241b7f-d3c1-4a6b-b95e-d5c858ce451a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "9449056e-6330-40b0-8dee-133fa631b067",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.2)",
                    "initialStateCheck": false
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "599745c9-3b8a-450c-afe1-953a22d90991",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "73117f8e-89ee-4c62-8eb4-7dc5df153daa",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f642c60d-61fa-44ad-893c-505449a4e59e",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9abecb1a-d200-48c3-a3cc-76f99cc51b8d",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a0f2a4c-c64b-4621-aa83-342424823d72",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "330dbe2e-3ac8-4dff-b357-dfe4bcb2bc9b",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "d1b5b709-5ad3-4a00-8dac-5f10748d757b",
            "actions": [
                {
                    "name": "Debug",
                    "type": "Button",
                    "id": "ff844b0b-ff17-47d9-91b6-2d78b1d8beaf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b0cd24e3-6a2d-4445-a9cd-166c6854e50d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Debug",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}